--- a/pycommander.ui
+++ b/pycommander.ui
@@ -19,6 +19,9 @@
    </property>
    <item row="4" column="1">
     <widget class="QSlider" name="slYaw">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
      <property name="minimumSize">
       <size>
        <width>300</width>
@@ -104,6 +107,9 @@
      </item>
      <item row="2" column="0">
       <widget class="QPushButton" name="btnPitchDec">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
        <property name="maximumSize">
         <size>
          <width>50</width>
@@ -117,6 +123,9 @@
      </item>
      <item row="2" column="1">
       <widget class="QPushButton" name="btnPitchInc">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
        <property name="maximumSize">
         <size>
          <width>50</width>
@@ -132,6 +141,9 @@
    </item>
    <item row="3" column="1">
     <widget class="QSlider" name="slPitch">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
      <property name="minimumSize">
       <size>
        <width>300</width>
@@ -217,6 +229,9 @@
      </item>
      <item row="2" column="0">
       <widget class="QPushButton" name="btnYawDec">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
        <property name="maximumSize">
         <size>
          <width>50</width>
@@ -230,6 +245,9 @@
      </item>
      <item row="2" column="1">
       <widget class="QPushButton" name="btnYawInc">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
        <property name="maximumSize">
         <size>
          <width>50</width>
